# Brutus

./: .dockerignore  .gitignore  CONTRIBUTING.md  Configuration.md  Dockerfile.sandbox  LICENSE  README.md  camera_client.py  camera_feed.py  cmd-frontend.ui  config.py  host.py  mic_client.py  mic_host.py  pyproject.toml  requirements.txt  sandbox.sh  trojaner.py
attacker/: Command.py  host.py  locator.py  main.py  mic_host.py  shell.py  util.py
attacker/service/: AudioService.py  LocatorService.py  Service.py  ServiceHandler.py  VideoService.py
attacker/services/: locator.py  microphone-host.py
attacker/terminal/: Command.py  ConnectionHandler.py  Server.py  Terminal.py
attacker/terminal/command/: Command.py  EchoCommand.py  IPCommand.py  QuitCommand.py  SendAtCommand.py  ShowClientsCommand.py  ShowHeaderCommand.py
attacker/terminal/server/: ConnectionHandler.py  Server.py
brutus/: __init__.py  __main__.py  cli.py
config/: Message.py
src/attacker/: main.py  util.py
src/attacker/service/: AudioService.py  LocatorService.py  Service.py  ServiceHandler.py  VideoService.py
src/attacker/terminal/command/: Command.py  EchoCommand.py  HelpCommand.py  IPCommand.py  QuitCommand.py  SendAtCommand.py  (+2 more)
src/config/: Message.py  config.py
src/victim/: payload.py
src/victim/client/: BackdoorClient.py  MicrophoneClient.py
tests/: __init__.py  test_project_commands.py
victim/: brutus.py  mic_client.py  microphone-client.py  payload.py
victim/client/: BackdoorClient.py  Client.py  MicrophoneClient.py  TCPClient.py  WebcamClient.py  webcam-client.py
(+2 files in other folders)
