[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brutus"
version = "0.1.0"
description = "Learning and experimentation repository."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests", "pynput", "opencv-python", "pyaudio"]

[project.optional-dependencies]
dev = ["ruff", "pre-commit"]

[project.scripts]
brutus = "brutus.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["brutus*", "src*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
